Bug 137771 - deletions-in-margin lagging actual deletions
Summary: deletions-in-margin lagging actual deletions
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: tracked-changes-in-margin
  Show dependency treegraph
 
Reported: 2020-10-26 14:39 UTC by Terrence Enger
Modified: 2020-11-17 15:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2020-10-26 14:39:14 UTC
This report arises from my poking at bug 137684.  I shall copy here or
link anything interesting.

STR

Once:

    (0) Tools > Options > "LibreOfficeDev Writer" > View > "Tracked
        deletions in margin" : checked

Per test:

    (1) Run LO with command line options --norestore --nologo --writer

    (2) Type "the quick brown".  Document has "The quick brown"; left
        margin is empty.

    (3) Take menu options Edit > "Track Changes" > Record.  No visible
        result.

    (4) Type "<bs><bs><bs><bs><bs>".  Document has "The quick ".

        Observed : left margin is empty.

        Expected : left margin shows struckthrough "brown".

    (5) Type "<ctrl>+Z".

        Observed : Document has "The quick n", and the "n" is
                   selected.  Left margin has struckthrough "b".

        Expected : Document has "The quick b", nothing selected.  Left
                   margin has struckthrough "rown".

Theses observations are from a local build of commit 5219c6bd
(2020-10-24) configured
    --with-vendor=Terrence Enger
    --with-jdk-home=/usr/lib/jvm/default-java
    --enable-split-debug
    --enable-gdb-index
    --enable-ld=gold
    --enable-option-checking=fatal
    #--enable-dbgutil
    --enable-debug
    --without-system-postgresql
    --without-myspell-dicts
    --with-extra-buildid
    --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src
    --without-package-format
built and running on debian-buster.
Comment 1 László Németh 2020-11-10 07:34:33 UTC
Likely the deletions haven't compressed this way, yet: all letters deleted separately are there in different redlines, and only the first deletion (empty space) showed up.
Comment 2 Commit Notification 2020-11-16 17:37:11 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d129e1785e541f217d4f6547faec87b9fa772019

tdf#137771 sw ChangesInMargin: fix end of paragraph

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2020-11-16 18:11:03 UTC
@Terrence: thanks for reporting the problem!
Comment 4 Terrence Enger 2020-11-17 15:11:59 UTC
Thank you, László.  I see the problem fixed in my refreshed local
build.

I am setting status VERIFIED FIXED.