tdf#137771 sw ChangesInMargin: fix end of paragraph

Deletions at the end of the paragraph weren't shown
on margin, including the vertical "Changed line" mark.

Change-Id: I2b79d1619cca891feab2f99eedad79ba330e75b9